# vesana-community

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: config.py  db.py  i18n.py  identity.py  main.py  seed.py  templating.py  version.py
app/auth/: deps.py  single_use.py  tokens.py
app/models/: __init__.py  answer.py  community_event.py  community_profile.py  community_profile_version.py  instance.py  moderation_report.py  profile_comment.py  question.py  used_login_token.py  vote.py
app/routers/: admin_api.py  admin_auth.py  admin_pages.py  auth.py  community_interactions.py  health.py  notifications.py  pages.py  profiles.py  qa.py  uploads.py
app/schemas/: __init__.py  admin.py  interactions.py  notifications.py  profile.py  qa.py  upload.py
app/services/: __init__.py  admin.py  comments.py  notifications.py  profiles.py  qa.py  ranking.py  uploads.py  voting.py
app/templates/: account.html  ask.html  base.html  browse.html  detail.html  index.html  question.html  questions.html  upload.html
docs/: DEPLOY.md  portal-issue-login-token.md
migrations/: env.py
migrations/versions/: 0001_init_community_schema.py  0002_profile_library.py  0003_voting_comments.py  (+5 more)
scripts/: gen_portal_keypair.py  seed_beta_from_vesana.py
tests/: conftest.py  test_admin.py  test_auth_sso.py  test_auth_tokens.py  test_comments.py  test_health.py  test_notifications.py  test_profiles.py  test_qa.py  test_uploads.py  test_voting.py
(+9 files in other folders)
